--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,17 @@
   <groupId>angular</groupId>
   <artifactId>angular</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <dependencies>
+  	<dependency>
+  		<groupId>org.springframework.boot</groupId>
+  		<artifactId>spring-boot</artifactId>
+  		<version>2.2.2.RELEASE</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.springframework.boot</groupId>
+  		<artifactId>spring-boot-maven-plugin</artifactId>
+  		<version>2.3.0.BUILD-SNAPSHOT</version>
+  		<type>maven-plugin</type>
+  	</dependency>
+  </dependencies>
 </project>
